// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonBlock matches snapshot for citizen with entitlement 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-view-1dbjc4n r-alignItems-1oszu61 r-flexDirection-eqz5dr r-justifyContent-1wtj0ep"
  >
    <div
      className="css-view-1dbjc4n r-alignItems-1awozwy"
      style={
        Object {
          "WebkitTransform": "scale(1)",
          "height": "140px",
          "transform": "scale(1)",
          "width": "140px",
        }
      }
    >
      <div
        className="css-view-1dbjc4n r-flex-13awgt0"
        style={
          Object {
            "WebkitTransform": "perspective(800px) rotateX(0deg)",
            "bottom": "0px",
            "left": "0px",
            "opacity": 100,
            "position": "absolute",
            "right": "0px",
            "top": "0px",
            "transform": "perspective(800px) rotateX(0deg)",
            "zIndex": 0,
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-flexDirection-eqz5dr r-justifyContent-1777fci"
          style={
            Object {
              "backgroundColor": "rgba(248,175,64,1.00)",
              "borderBottomColor": "rgba(255,255,255,1.00)",
              "borderBottomLeftRadius": "70px",
              "borderBottomRightRadius": "70px",
              "borderBottomStyle": "solid",
              "borderBottomWidth": "8px",
              "borderLeftColor": "rgba(255,255,255,1.00)",
              "borderLeftStyle": "solid",
              "borderLeftWidth": "8px",
              "borderRightColor": "rgba(255,255,255,1.00)",
              "borderRightStyle": "solid",
              "borderRightWidth": "8px",
              "borderTopColor": "rgba(255,255,255,1.00)",
              "borderTopLeftRadius": "70px",
              "borderTopRightRadius": "70px",
              "borderTopStyle": "solid",
              "borderTopWidth": "8px",
              "boxShadow": "0px 0px 0px rgba(0,0,0,1.00)",
              "height": "140px",
              "marginBottom": "0px",
              "marginLeft": "0px",
              "marginRight": "0px",
              "marginTop": "0px",
              "minHeight": "44px",
              "minWidth": "auto",
              "paddingBottom": "0px",
              "paddingLeft": "0px",
              "paddingRight": "0px",
              "paddingTop": "0px",
              "width": "140px",
            }
          }
        >
          <div
            className="css-cursor-18t94o4 css-view-1dbjc4n r-flex-13awgt0 r-overflow-1udh08x r-position-bnwqim"
            onClick={[Function]}
            onContextMenu={[Function]}
            onKeyDown={[Function]}
            role="button"
            style={
              Object {
                "WebkitAlignSelf": "stretch",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": "70px",
                "borderBottomRightRadius": "70px",
                "borderTopLeftRadius": "70px",
                "borderTopRightRadius": "70px",
                "msFlexItemAlign": "stretch",
                "msGridRowAlign": "stretch",
              }
            }
            tabIndex="0"
          >
            <div
              className="css-view-1dbjc4n r-alignItems-1awozwy r-flex-13awgt0 r-flexDirection-18u37iz r-justifyContent-1777fci"
              style={
                Object {
                  "WebkitAlignSelf": "stretch",
                  "alignSelf": "stretch",
                  "msFlexItemAlign": "stretch",
                  "msGridRowAlign": "stretch",
                }
              }
            >
              <div
                className="css-view-1dbjc4n r-marginHorizontal-1ybube5 r-marginVertical-712mwr"
              >
                <div
                  className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-flex-13awgt0 r-flexDirection-18u37iz"
                >
                  <div
                    className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-flexDirection-eqz5dr r-justifyContent-1777fci"
                  >
                    <div
                      className="css-text-901oao r-color-waoq6i r-fontFamily-vnw8o6 r-fontSize-1b43r93 r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-5fcqz0 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-1ozqkpa"
                      dir="auto"
                    >
                      Your Next Claim:
                    </div>
                    <div
                      className="css-view-1dbjc4n r-alignItems-1awozwy r-flexDirection-18u37iz r-justifyContent-1777fci"
                    >
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-1h2t8mc"
                        dir="auto"
                      >
                        0
                      </div>
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-1h2t8mc"
                        dir="auto"
                      >
                        0
                      </div>
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-5soawk"
                        dir="auto"
                      >
                        :
                      </div>
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-1h2t8mc"
                        dir="auto"
                      >
                        1
                      </div>
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-1h2t8mc"
                        dir="auto"
                      >
                        0
                      </div>
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-5soawk"
                        dir="auto"
                      >
                        :
                      </div>
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-1h2t8mc"
                        dir="auto"
                      >
                        0
                      </div>
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-1h2t8mc"
                        dir="auto"
                      >
                        0
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="css-view-1dbjc4n r-flex-13awgt0"
        style={
          Object {
            "WebkitTransform": "perspective(-800px) rotateX(-180deg)",
            "bottom": "0px",
            "left": "0px",
            "opacity": 0,
            "position": "absolute",
            "right": "0px",
            "top": "0px",
            "transform": "perspective(-800px) rotateX(-180deg)",
            "zIndex": 1,
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-justifyContent-1777fci"
          style={
            Object {
              "backgroundColor": "rgba(0,195,174,1.00)",
              "borderBottomColor": "rgba(255,255,255,1.00)",
              "borderBottomLeftRadius": "70px",
              "borderBottomRightRadius": "70px",
              "borderBottomStyle": "solid",
              "borderBottomWidth": "8px",
              "borderLeftColor": "rgba(255,255,255,1.00)",
              "borderLeftStyle": "solid",
              "borderLeftWidth": "8px",
              "borderRightColor": "rgba(255,255,255,1.00)",
              "borderRightStyle": "solid",
              "borderRightWidth": "8px",
              "borderTopColor": "rgba(255,255,255,1.00)",
              "borderTopLeftRadius": "70px",
              "borderTopRightRadius": "70px",
              "borderTopStyle": "solid",
              "borderTopWidth": "8px",
              "boxShadow": "0px 0px 0px rgba(0,0,0,1.00)",
              "height": "140px",
              "marginBottom": "0px",
              "marginLeft": "0px",
              "marginRight": "0px",
              "marginTop": "0px",
              "minHeight": "44px",
              "minWidth": "auto",
              "paddingBottom": "0px",
              "paddingLeft": "0px",
              "paddingRight": "0px",
              "paddingTop": "0px",
              "width": "140px",
            }
          }
        >
          <div
            className="css-cursor-18t94o4 css-view-1dbjc4n r-flex-13awgt0 r-overflow-1udh08x r-position-bnwqim"
            onClick={[Function]}
            onContextMenu={[Function]}
            onKeyDown={[Function]}
            role="button"
            style={
              Object {
                "WebkitAlignSelf": "stretch",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": "70px",
                "borderBottomRightRadius": "70px",
                "borderTopLeftRadius": "70px",
                "borderTopRightRadius": "70px",
                "msFlexItemAlign": "stretch",
                "msGridRowAlign": "stretch",
              }
            }
            tabIndex="0"
          >
            <div
              className="css-view-1dbjc4n r-alignItems-1awozwy r-flex-13awgt0 r-flexDirection-18u37iz r-justifyContent-1777fci"
              style={
                Object {
                  "WebkitAlignSelf": "stretch",
                  "alignSelf": "stretch",
                  "msFlexItemAlign": "stretch",
                  "msGridRowAlign": "stretch",
                }
              }
            >
              <div
                className="css-view-1dbjc4n r-marginHorizontal-1ybube5 r-marginVertical-712mwr"
              >
                <div
                  className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-flex-13awgt0 r-flexDirection-18u37iz"
                >
                  <div
                    className="css-view-1dbjc4n"
                  >
                    <div
                      className="css-text-901oao r-color-waoq6i r-fontFamily-vnw8o6 r-fontSize-ubezar r-fontWeight-majxgm r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y"
                      dir="auto"
                    >
                      Get your 
                    </div>
                    <div
                      className="css-text-901oao r-color-waoq6i r-fontFamily-vnw8o6 r-fontSize-ubezar r-fontWeight-majxgm r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y"
                      dir="auto"
                    >
                       free daily share:
                    </div>
                    <div
                      className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-flexDirection-18u37iz"
                    >
                      <div
                        className="css-text-901oao r-color-jwli3a r-fontFamily-vnw8o6 r-fontSize-hiw28u r-fontWeight-b88u0q r-lineHeight-qvk6io r-marginRight-a5pmau r-textAlign-1ff274t r-textDecorationLine-13wfysu r-textTransform-3twk1y"
                        dir="auto"
                      >
                        1
                      </div>
                      <div
                        className="css-view-1dbjc4n r-alignItems-1awozwy r-flexDirection-18u37iz r-justifyContent-1wtj0ep"
                      >
                        <div
                          className="css-text-901oao r-color-jwli3a r-fontFamily-vnw8o6 r-fontSize-ubezar r-fontWeight-majxgm r-lineHeight-qvk6io r-textAlign-1ff274t r-textDecorationLine-13wfysu r-textTransform-3twk1y"
                          dir="auto"
                        >
                          G
                        </div>
                        <div
                          className="css-text-901oao r-color-jwli3a r-fontFamily-vnw8o6 r-fontSize-ubezar r-fontWeight-majxgm r-lineHeight-qvk6io r-textAlign-1ff274t r-textDecorationLine-13wfysu r-textTransform-3twk1y"
                          dir="auto"
                        >
                          $
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ButtonBlock matches snapshot for citizen without entitlement 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-view-1dbjc4n r-alignItems-1oszu61 r-flexDirection-eqz5dr r-justifyContent-1wtj0ep"
  >
    <div
      className="css-view-1dbjc4n r-alignItems-1awozwy"
      style={
        Object {
          "WebkitTransform": "scale(1)",
          "height": "140px",
          "transform": "scale(1)",
          "width": "140px",
        }
      }
    >
      <div
        className="css-view-1dbjc4n r-flex-13awgt0"
        style={
          Object {
            "WebkitTransform": "perspective(800px) rotateY(0deg)",
            "bottom": "0px",
            "left": "0px",
            "opacity": 100,
            "position": "absolute",
            "right": "0px",
            "top": "0px",
            "transform": "perspective(800px) rotateY(0deg)",
            "zIndex": 1,
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-flexDirection-eqz5dr r-justifyContent-1777fci"
          style={
            Object {
              "backgroundColor": "rgba(248,175,64,1.00)",
              "borderBottomColor": "rgba(255,255,255,1.00)",
              "borderBottomLeftRadius": "70px",
              "borderBottomRightRadius": "70px",
              "borderBottomStyle": "solid",
              "borderBottomWidth": "8px",
              "borderLeftColor": "rgba(255,255,255,1.00)",
              "borderLeftStyle": "solid",
              "borderLeftWidth": "8px",
              "borderRightColor": "rgba(255,255,255,1.00)",
              "borderRightStyle": "solid",
              "borderRightWidth": "8px",
              "borderTopColor": "rgba(255,255,255,1.00)",
              "borderTopLeftRadius": "70px",
              "borderTopRightRadius": "70px",
              "borderTopStyle": "solid",
              "borderTopWidth": "8px",
              "boxShadow": "0px 0px 0px rgba(0,0,0,1.00)",
              "height": "140px",
              "marginBottom": "0px",
              "marginLeft": "0px",
              "marginRight": "0px",
              "marginTop": "0px",
              "minHeight": "44px",
              "minWidth": "auto",
              "paddingBottom": "0px",
              "paddingLeft": "0px",
              "paddingRight": "0px",
              "paddingTop": "0px",
              "width": "140px",
            }
          }
        >
          <div
            className="css-cursor-18t94o4 css-view-1dbjc4n r-flex-13awgt0 r-overflow-1udh08x r-position-bnwqim"
            onClick={[Function]}
            onContextMenu={[Function]}
            onKeyDown={[Function]}
            role="button"
            style={
              Object {
                "WebkitAlignSelf": "stretch",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": "70px",
                "borderBottomRightRadius": "70px",
                "borderTopLeftRadius": "70px",
                "borderTopRightRadius": "70px",
                "msFlexItemAlign": "stretch",
                "msGridRowAlign": "stretch",
              }
            }
            tabIndex="0"
          >
            <div
              className="css-view-1dbjc4n r-alignItems-1awozwy r-flex-13awgt0 r-flexDirection-18u37iz r-justifyContent-1777fci"
              style={
                Object {
                  "WebkitAlignSelf": "stretch",
                  "alignSelf": "stretch",
                  "msFlexItemAlign": "stretch",
                  "msGridRowAlign": "stretch",
                }
              }
            >
              <div
                className="css-view-1dbjc4n r-marginHorizontal-1ybube5 r-marginVertical-712mwr"
              >
                <div
                  className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-flex-13awgt0 r-flexDirection-18u37iz"
                >
                  <div
                    className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-flexDirection-eqz5dr r-justifyContent-1777fci"
                  >
                    <div
                      className="css-text-901oao r-color-waoq6i r-fontFamily-vnw8o6 r-fontSize-1b43r93 r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-5fcqz0 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-1ozqkpa"
                      dir="auto"
                    >
                      Your Next Claim:
                    </div>
                    <div
                      className="css-view-1dbjc4n r-alignItems-1awozwy r-flexDirection-18u37iz r-justifyContent-1777fci"
                    >
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-1h2t8mc"
                        dir="auto"
                      >
                        0
                      </div>
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-1h2t8mc"
                        dir="auto"
                      >
                        0
                      </div>
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-5soawk"
                        dir="auto"
                      >
                        :
                      </div>
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-1h2t8mc"
                        dir="auto"
                      >
                        1
                      </div>
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-1h2t8mc"
                        dir="auto"
                      >
                        0
                      </div>
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-5soawk"
                        dir="auto"
                      >
                        :
                      </div>
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-1h2t8mc"
                        dir="auto"
                      >
                        0
                      </div>
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-1h2t8mc"
                        dir="auto"
                      >
                        0
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="css-view-1dbjc4n r-flex-13awgt0"
        style={
          Object {
            "WebkitTransform": "perspective(-800px) rotateY(-180deg)",
            "bottom": "0px",
            "left": "0px",
            "opacity": 0,
            "position": "absolute",
            "right": "0px",
            "top": "0px",
            "transform": "perspective(-800px) rotateY(-180deg)",
            "zIndex": 0,
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-flexDirection-eqz5dr r-justifyContent-1777fci"
          style={
            Object {
              "backgroundColor": "rgba(248,175,64,1.00)",
              "borderBottomColor": "rgba(255,255,255,1.00)",
              "borderBottomLeftRadius": "70px",
              "borderBottomRightRadius": "70px",
              "borderBottomStyle": "solid",
              "borderBottomWidth": "8px",
              "borderLeftColor": "rgba(255,255,255,1.00)",
              "borderLeftStyle": "solid",
              "borderLeftWidth": "8px",
              "borderRightColor": "rgba(255,255,255,1.00)",
              "borderRightStyle": "solid",
              "borderRightWidth": "8px",
              "borderTopColor": "rgba(255,255,255,1.00)",
              "borderTopLeftRadius": "70px",
              "borderTopRightRadius": "70px",
              "borderTopStyle": "solid",
              "borderTopWidth": "8px",
              "boxShadow": "0px 0px 0px rgba(0,0,0,1.00)",
              "height": "140px",
              "marginBottom": "0px",
              "marginLeft": "0px",
              "marginRight": "0px",
              "marginTop": "0px",
              "minHeight": "44px",
              "minWidth": "auto",
              "paddingBottom": "0px",
              "paddingLeft": "0px",
              "paddingRight": "0px",
              "paddingTop": "0px",
              "width": "140px",
            }
          }
        >
          <div
            className="css-cursor-18t94o4 css-view-1dbjc4n r-flex-13awgt0 r-overflow-1udh08x r-position-bnwqim"
            onClick={[Function]}
            onContextMenu={[Function]}
            onKeyDown={[Function]}
            role="button"
            style={
              Object {
                "WebkitAlignSelf": "stretch",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": "70px",
                "borderBottomRightRadius": "70px",
                "borderTopLeftRadius": "70px",
                "borderTopRightRadius": "70px",
                "msFlexItemAlign": "stretch",
                "msGridRowAlign": "stretch",
              }
            }
            tabIndex="0"
          >
            <div
              className="css-view-1dbjc4n r-alignItems-1awozwy r-flex-13awgt0 r-flexDirection-18u37iz r-justifyContent-1777fci"
              style={
                Object {
                  "WebkitAlignSelf": "stretch",
                  "alignSelf": "stretch",
                  "msFlexItemAlign": "stretch",
                  "msGridRowAlign": "stretch",
                }
              }
            >
              <div
                className="css-view-1dbjc4n r-marginHorizontal-1ybube5 r-marginVertical-712mwr"
              >
                <div
                  className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-flex-13awgt0 r-flexDirection-18u37iz"
                >
                  <div
                    className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-flexDirection-eqz5dr r-justifyContent-1777fci"
                  >
                    <div
                      className="css-text-901oao r-color-waoq6i r-fontFamily-vnw8o6 r-fontSize-1b43r93 r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-5fcqz0 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-1ozqkpa"
                      dir="auto"
                    >
                      Your Next Claim:
                    </div>
                    <div
                      className="css-view-1dbjc4n r-alignItems-1awozwy r-flexDirection-18u37iz r-justifyContent-1777fci"
                    >
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-1h2t8mc"
                        dir="auto"
                      >
                        0
                      </div>
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-1h2t8mc"
                        dir="auto"
                      >
                        0
                      </div>
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-5soawk"
                        dir="auto"
                      >
                        :
                      </div>
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-1h2t8mc"
                        dir="auto"
                      >
                        1
                      </div>
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-1h2t8mc"
                        dir="auto"
                      >
                        0
                      </div>
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-5soawk"
                        dir="auto"
                      >
                        :
                      </div>
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-1h2t8mc"
                        dir="auto"
                      >
                        0
                      </div>
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-1h2t8mc"
                        dir="auto"
                      >
                        0
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ButtonBlock renders without errors and matches snapshot for non-citizen 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-view-1dbjc4n r-alignItems-1oszu61 r-flexDirection-eqz5dr r-justifyContent-1wtj0ep"
  >
    <div
      className="css-view-1dbjc4n r-alignItems-1awozwy"
      style={
        Object {
          "WebkitTransform": "scale(1)",
          "height": "140px",
          "transform": "scale(1)",
          "width": "140px",
        }
      }
    >
      <div
        className="css-view-1dbjc4n r-flex-13awgt0"
        style={
          Object {
            "WebkitTransform": "perspective(800px) rotateY(0deg)",
            "bottom": "0px",
            "left": "0px",
            "opacity": 100,
            "position": "absolute",
            "right": "0px",
            "top": "0px",
            "transform": "perspective(800px) rotateY(0deg)",
            "zIndex": 1,
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-flexDirection-eqz5dr r-justifyContent-1777fci"
          style={
            Object {
              "backgroundColor": "rgba(248,175,64,1.00)",
              "borderBottomColor": "rgba(255,255,255,1.00)",
              "borderBottomLeftRadius": "70px",
              "borderBottomRightRadius": "70px",
              "borderBottomStyle": "solid",
              "borderBottomWidth": "8px",
              "borderLeftColor": "rgba(255,255,255,1.00)",
              "borderLeftStyle": "solid",
              "borderLeftWidth": "8px",
              "borderRightColor": "rgba(255,255,255,1.00)",
              "borderRightStyle": "solid",
              "borderRightWidth": "8px",
              "borderTopColor": "rgba(255,255,255,1.00)",
              "borderTopLeftRadius": "70px",
              "borderTopRightRadius": "70px",
              "borderTopStyle": "solid",
              "borderTopWidth": "8px",
              "boxShadow": "0px 0px 0px rgba(0,0,0,1.00)",
              "height": "140px",
              "marginBottom": "0px",
              "marginLeft": "0px",
              "marginRight": "0px",
              "marginTop": "0px",
              "minHeight": "44px",
              "minWidth": "auto",
              "paddingBottom": "0px",
              "paddingLeft": "0px",
              "paddingRight": "0px",
              "paddingTop": "0px",
              "width": "140px",
            }
          }
        >
          <div
            className="css-cursor-18t94o4 css-view-1dbjc4n r-flex-13awgt0 r-overflow-1udh08x r-position-bnwqim"
            onClick={[Function]}
            onContextMenu={[Function]}
            onKeyDown={[Function]}
            role="button"
            style={
              Object {
                "WebkitAlignSelf": "stretch",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": "70px",
                "borderBottomRightRadius": "70px",
                "borderTopLeftRadius": "70px",
                "borderTopRightRadius": "70px",
                "msFlexItemAlign": "stretch",
                "msGridRowAlign": "stretch",
              }
            }
            tabIndex="0"
          >
            <div
              className="css-view-1dbjc4n r-alignItems-1awozwy r-flex-13awgt0 r-flexDirection-18u37iz r-justifyContent-1777fci"
              style={
                Object {
                  "WebkitAlignSelf": "stretch",
                  "alignSelf": "stretch",
                  "msFlexItemAlign": "stretch",
                  "msGridRowAlign": "stretch",
                }
              }
            >
              <div
                className="css-view-1dbjc4n r-marginHorizontal-1ybube5 r-marginVertical-712mwr"
              >
                <div
                  className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-flex-13awgt0 r-flexDirection-18u37iz"
                >
                  <div
                    className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-flexDirection-eqz5dr r-justifyContent-1777fci"
                  >
                    <div
                      className="css-text-901oao r-color-waoq6i r-fontFamily-vnw8o6 r-fontSize-1b43r93 r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-5fcqz0 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-1ozqkpa"
                      dir="auto"
                    >
                      Your Next Claim:
                    </div>
                    <div
                      className="css-view-1dbjc4n r-alignItems-1awozwy r-flexDirection-18u37iz r-justifyContent-1777fci"
                    >
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-1h2t8mc"
                        dir="auto"
                      >
                        0
                      </div>
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-1h2t8mc"
                        dir="auto"
                      >
                        0
                      </div>
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-5soawk"
                        dir="auto"
                      >
                        :
                      </div>
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-1h2t8mc"
                        dir="auto"
                      >
                        1
                      </div>
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-1h2t8mc"
                        dir="auto"
                      >
                        0
                      </div>
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-5soawk"
                        dir="auto"
                      >
                        :
                      </div>
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-1h2t8mc"
                        dir="auto"
                      >
                        0
                      </div>
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-1h2t8mc"
                        dir="auto"
                      >
                        0
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="css-view-1dbjc4n r-flex-13awgt0"
        style={
          Object {
            "WebkitTransform": "perspective(-800px) rotateY(-180deg)",
            "bottom": "0px",
            "left": "0px",
            "opacity": 0,
            "position": "absolute",
            "right": "0px",
            "top": "0px",
            "transform": "perspective(-800px) rotateY(-180deg)",
            "zIndex": 0,
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-justifyContent-1777fci"
          style={
            Object {
              "backgroundColor": "rgba(0,195,174,1.00)",
              "borderBottomColor": "rgba(255,255,255,1.00)",
              "borderBottomLeftRadius": "70px",
              "borderBottomRightRadius": "70px",
              "borderBottomStyle": "solid",
              "borderBottomWidth": "8px",
              "borderLeftColor": "rgba(255,255,255,1.00)",
              "borderLeftStyle": "solid",
              "borderLeftWidth": "8px",
              "borderRightColor": "rgba(255,255,255,1.00)",
              "borderRightStyle": "solid",
              "borderRightWidth": "8px",
              "borderTopColor": "rgba(255,255,255,1.00)",
              "borderTopLeftRadius": "70px",
              "borderTopRightRadius": "70px",
              "borderTopStyle": "solid",
              "borderTopWidth": "8px",
              "boxShadow": "0px 0px 0px rgba(0,0,0,1.00)",
              "height": "140px",
              "marginBottom": "0px",
              "marginLeft": "0px",
              "marginRight": "0px",
              "marginTop": "0px",
              "minHeight": "44px",
              "minWidth": "auto",
              "paddingBottom": "0px",
              "paddingLeft": "0px",
              "paddingRight": "0px",
              "paddingTop": "0px",
              "width": "140px",
            }
          }
        >
          <div
            className="css-cursor-18t94o4 css-view-1dbjc4n r-flex-13awgt0 r-overflow-1udh08x r-position-bnwqim"
            onClick={[Function]}
            onContextMenu={[Function]}
            onKeyDown={[Function]}
            role="button"
            style={
              Object {
                "WebkitAlignSelf": "stretch",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": "70px",
                "borderBottomRightRadius": "70px",
                "borderTopLeftRadius": "70px",
                "borderTopRightRadius": "70px",
                "msFlexItemAlign": "stretch",
                "msGridRowAlign": "stretch",
              }
            }
            tabIndex="0"
          >
            <div
              className="css-view-1dbjc4n r-alignItems-1awozwy r-flex-13awgt0 r-flexDirection-18u37iz r-justifyContent-1777fci"
              style={
                Object {
                  "WebkitAlignSelf": "stretch",
                  "alignSelf": "stretch",
                  "msFlexItemAlign": "stretch",
                  "msGridRowAlign": "stretch",
                }
              }
            >
              <div
                className="css-view-1dbjc4n r-marginHorizontal-1ybube5 r-marginVertical-712mwr"
              >
                <div
                  className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-flex-13awgt0 r-flexDirection-18u37iz"
                >
                  <div
                    className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-flexDirection-eqz5dr r-justifyContent-1777fci"
                  >
                    <div
                      className="css-text-901oao r-color-waoq6i r-fontFamily-vnw8o6 r-fontSize-1b43r93 r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-5fcqz0 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-1ozqkpa"
                      dir="auto"
                    >
                      Your Next Claim:
                    </div>
                    <div
                      className="css-view-1dbjc4n r-alignItems-1awozwy r-flexDirection-18u37iz r-justifyContent-1777fci"
                    >
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-1h2t8mc"
                        dir="auto"
                      >
                        0
                      </div>
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-1h2t8mc"
                        dir="auto"
                      >
                        0
                      </div>
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-5soawk"
                        dir="auto"
                      >
                        :
                      </div>
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-1h2t8mc"
                        dir="auto"
                      >
                        1
                      </div>
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-1h2t8mc"
                        dir="auto"
                      >
                        0
                      </div>
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-5soawk"
                        dir="auto"
                      >
                        :
                      </div>
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-1h2t8mc"
                        dir="auto"
                      >
                        0
                      </div>
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-b88u0q r-letterSpacing-oxtfae r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-1h2t8mc"
                        dir="auto"
                      >
                        0
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
